[project]
name = "explainable"
description = "Visualise complex data structures in real time"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  { name = "Numan Team", email = "kostya@numan.ai" },
]
maintainers = [
  { name = "Numan Team", email = "kostya@numan.ai" },
]
dynamic = ["version"]
dependencies = [
  "websockets>=12.0",
]
keywords = ["visualisation", "debug", "debugger", "debugging", "data structures", "explainable"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/numan-ai/explainable"
Documentation = "https://example.com"
Repository = "https://github.com/numan-ai/explainable.git"
Issues = "https://github.com/numan-ai/explainable/issues"
Changelog = "https://github.com/numan-ai/explainable/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/explainable/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  "/docs",
]

[tool.hatch.build.targets.wheel]
packages = ["src/explainable"]